--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "greenpoint-dev",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
